# similarity-lab

./: .gitattributes  .gitignore  README.md  SimilarFinder.py  example.ipynb  main.py  pyproject.toml  tempClass.py  tests.py
OLD/: LICENSE
OLD/models/dw2v/nyt/: 00-1970.npy  01-1971.npy  04-1974.npy  05-1975.npy  06-1976.npy  07-1977.npy  08-1978.npy  (+16 more)
OLD/paquete/: main.py
models/dw2v/nyt/: 02-1972.npy  03-1973.npy  10-1981.npy  11-1982.npy  14-1985.npy  16-1987.npy  17-1988.npy  18-1989.npy  24-1995.npy  25-1996.npy  26-1997.npy  28-1999.npy  29-2000.npy  30-2001.npy  32-2003.npy  36-2007.npy  37-2008.npy  38-2009.npy  40-2011.npy  42-2013.npy  43-2014.npy  dictionary.pck
models/hamilton/theguardian/: 01-2000.npy  02-2001.npy  05-2004.npy  08-2007.npy  09-2008.npy  10-2009.npy  11-2010.npy  12-2011.npy  15-2014.npy  17-2016.npy  dictionary.pck  emb_1999.pck  emb_2000.pck  emb_2001.pck  emb_2002.pck  emb_2003.pck  emb_2004.pck  emb_2005.pck  emb_2006.pck  emb_2007.pck  emb_2008.pck  emb_2009.pck  emb_2010.pck  emb_2011.pck  emb_2012.pck  emb_2013.pck  emb_2014.pck  emb_2015.pck  emb_2016.pck  emb_2017.pck
paquete/: conf.py
paquete/_build/doctrees/: environment.pickle  index.doctree
paquete/_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
paquete/docs/source/: conf.py  index.rst
similab/: __init__.py  main.py
similab/core/: __init__.py  lab_tools.py
similab/data/: __init__.py  constants.py  data_loader.py  donwload_manager.py  model_ds.py
similab/data/constants/: constants.py
similab/tests/: test_similab.py
(+12 files in other folders)
