[tool.poetry]
name = "similab"
version = "0.1.0"
description = ""
authors = ["MT2321 <mrodriguez@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.8"
numpy = "^1.19.1"
scipy = "^1.5.2"
tqdm = "^4.48.0"
requests = "^2.24.0"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
spherecluster = "^0.1.7"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "<=5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
